--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "angular-animate": "~1.5.3",
     "angular-cookies": "~1.5.3",
-    "angular-touch": "~1.5.3",
     "angular-sanitize": "~1.5.3",
     "angular-messages": "~1.5.3",
     "angular-aria": "~1.5.3",
@@ -19,7 +18,9 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "angular-bindonce": "^0.3.3",
-    "angular-material": "^1.1.1"
+    "angular-material": "^1.1.1",
+    "angular-slick": "^0.2.1",
+    "angular-flexslider": "^1.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
