--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-bindonce": "^0.3.3",
     "angular-material": "^1.1.1",
     "angular-slick": "^0.2.1",
-    "angular-flexslider": "^1.3.2"
+    "angular-flexslider": "^1.3.2",
+    "lodash": "^4.16.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
