--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-material": "^1.1.1",
     "angular-slick": "^0.2.1",
     "angular-flexslider": "^1.3.2",
-    "lodash": "^4.16.4"
+    "lodash": "^4.16.4",
+    "angular-loading-bar": "^0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
